ReturnUrl and /payments/details

--- a/force-app/main/default/classes/AdyenService.cls
+++ b/force-app/main/default/classes/AdyenService.cls
@@ -23,7 +23,7 @@ global with sharing class AdyenService {
             return AdyenOrder.updateOrderStatus(cartId);
         }
 
+        paymentResult.put('orderSuccess', orderSuccess);
         return JSON.serialize(paymentResult, true);
-
     }
 }
