--- a/force-app/main/default/classes/AdyenOrder.cls
+++ b/force-app/main/default/classes/AdyenOrder.cls
@@ -1,12 +1,11 @@
 global with sharing class AdyenOrder {
-    public static Map<String, Object> createOpenOrder(Map<String, Object> processResult, ccrz__E_Cart__c cart) {
+    public static Map<String, Object> placeOrder(Map<String, Object> processResult, String cartId) {
             Map<String, Object> createOrderParams = new Map<String, Object>{
-                    ccrz.ccApi.API_VERSION => 9,
+                    ccrz.ccApi.API_VERSION => ccrz.ccAPI.CURRENT_VERSION,
                     ccrz.ccApiCart.TRANSPAYMENTDATA =>
                             processResult.get(ccrz.cc_hk_Payment.PARAM_TRANSACTION_PROCESSED_DATA),
                     ccrz.ccApiCart.PAYMENTRESULT => processResult,
-                    ccrz.ccApiCart.CART_ENCID => cart.Id,
-                    ccrz.ccApiOrder.PARAM_ORDER_STATUS => 'Open'
+                    ccrz.ccApiCart.CART_ENCID => cartId
             };
             if (Test.isRunningTest()) {
                 createOrderParams.put(ccrz.ccApiCart.SKIP_VALID_CHECK, true);
@@ -26,21 +25,10 @@ global with sharing class AdyenOrder {
             orderResult.put('orderIdEnc', placedOrder[0].ccrz__EncryptedId__c);
             orderResult.put('cartId', placedOrder[0].ccrz__OriginatedCart__c);
         }
-
         return orderResult;
     }
 
-     public static String updateOrderStatus(String cartId){
-        ccrz__E_Order__c[] authOrder = AdyenOrder.getOrderByCartId(cartId);
-        if(authOrder <> null && authOrder.size() == 1) {
-            //TODOBAS update Order Status authOrder[0]
-            return authOrder[0].ccrz__EncryptedId__c;
-        }
-
-        return 'OrderInvalid';
-    }
-
-    public static ccrz__E_Order__c[] getOrderById(String orderId){
+    private static ccrz__E_Order__c[] getOrderById(String orderId){
         return  [
                 SELECT Id, ccrz__EncryptedId__c, ccrz__OriginatedCart__c
                 FROM ccrz__E_Order__c
@@ -48,14 +36,4 @@ global with sharing class AdyenOrder {
                 LIMIT 1
         ];
     }
-
-    public static ccrz__E_Order__c[] getOrderByCartId(String cartId){
-        return  [
-                SELECT Id, ccrz__EncryptedId__c, ccrz__OriginatedCart__c
-                FROM ccrz__E_Order__c
-                WHERE ccrz__OriginatedCart__c = :cartId
-                LIMIT 1
-        ];
-    }
-
 }
