Renamed methods/files, metadata, deleted loggers

--- a/force-app/main/default/classes/AdyenPayments.cls
+++ b/force-app/main/default/classes/AdyenPayments.cls
@@ -1,11 +1,10 @@
-public with sharing class AdyenPaymentRequest {
-    public static PaymentRequest createPaymentRequest(String stateData, ccrz__E_Cart__c cart, Merchant__mdt merchant) {
-        PaymentRequest paymentRequest = createPaymentRequestFromStateData(stateData);
+public with sharing class AdyenPayments {
+    public static PaymentsRequest createPaymentsRequest(String stateData, ccrz__E_Cart__c cart, Merchant__mdt merchant) {
+        PaymentsRequest paymentRequest = createPaymentsRequestFromStateData(stateData);
         paymentRequest.merchantAccount = merchant.Merchant_Account__c;
         paymentRequest.amount = AdyenUtil.getAdyenAmount(cart.ccrz__CurrencyISOCode__c, cart.ccrz__TotalAmount__c);
         paymentRequest.applicationInfo = AdyenUtil.getApplicationInfo();
         paymentRequest.reference = cart.Id;
-//        paymentRequest.returnUrl = 'https://b2b-scoping-0920-developer-edition.na139.force.com/services/apexrest/AdyenReturnUrl/*';
         //TODOBAS dynamic get host
         paymentRequest.returnUrl = 'https://b2b-scoping-0920-dev-ed--c.visualforce.com/apex/AdyenReturn?merchantReference=' + cart.Id;
         paymentRequest.shopperReference = cart.ccrz__Account__c;
@@ -14,8 +13,8 @@ public with sharing class AdyenPaymentRequest {
         return paymentRequest;
     }
 
-    private static PaymentRequest createPaymentRequestFromStateData(String stateData) {
-        PaymentRequest paymentRequest = new PaymentRequest();
+    private static PaymentsRequest createPaymentsRequestFromStateData(String stateData) {
+        PaymentsRequest paymentRequest = new PaymentsRequest();
         Map<String, Object> stateDataObjects = (Map<String, Object>) JSON.deserializeUntyped(stateData);
         if (stateDataObjects.containsKey('riskData')) {
             Map<String, Object> riskData = (Map<String, Object>) stateDataObjects.get('riskData');
@@ -80,7 +79,7 @@ public with sharing class AdyenPaymentRequest {
         };
     }
 
-    public static PaymentsResponse authorisePayment(Merchant__mdt merchant, PaymentRequest request) {
+    public static PaymentsResponse authorisePayment(Merchant__mdt merchant, PaymentsRequest request) {
         PaymentsResponse paymentsResponse = new PaymentsResponse();
         AdyenClient client = new AdyenClient(merchant.API_Key__c, merchant.Payment_Endpoint__c);
         String jsonString = JSON.serialize(request, true);
