--- a/force-app/main/default/classes/cc_adyencc_ccPaymentProcessor.cls
+++ b/force-app/main/default/classes/cc_adyencc_ccPaymentProcessor.cls
@@ -4,14 +4,10 @@ global inherited sharing class cc_adyencc_ccPaymentProcessor extends ccrz.ccPaym
         if (paymentProcessorInput.get(ccrz.cc_hk_Payment.PARAM_PAYMENT_CTX) == ccrz.cc_hk_Payment.PARAM_PAYMENT_CTX_CHECKOUT) {
             ccrz.cc_hk_Payment.TransactionPaymentParams paymentParams = (ccrz.cc_hk_Payment.TransactionPaymentParams) paymentProcessorInput.get(ccrz.cc_hk_Payment.PARAM_TRANSACTION_PROCESSED_DATA);
             ccrz__E_Cart__c cart = (ccrz__E_Cart__c) paymentProcessorInput.get('cart');
-            Merchant__mdt merchant = AdyenUtil.getConfiguredMerchantAccount(cart);
             paymentParams.transactionType = AdyenUtil.getConfiguredCaptureDelay(cart);
             String stateData = String.valueOf(paymentParams.token);
 
-            PaymentsRequest paymentRequest = AdyenPayments.createPaymentsRequest(stateData, cart, merchant);
-            PaymentsResponse paymentsResponse = AdyenPayments.authorisePayment(merchant, paymentRequest);
-
-            Map<String, Object> paymentResult = AdyenResponseHandler.handleResponse(paymentsResponse);
+            Map<String, Object> paymentResult = AdyenController.handlePaymentsCall(cart, stateData, false);
             paymentProcessorInput.put('paymentResult', paymentResult);
 
             paymentParams.transactionCode = paymentsResponse.pspReference;
