--- a/force-app/main/default/classes/AdyenController.cls
+++ b/force-app/main/default/classes/AdyenController.cls
@@ -2,8 +2,7 @@ global with sharing class AdyenController {
     public static ccrz.cc_RemoteActionResult obtainPaymentMethods(ccrz.cc_RemoteActionContext ctx, Boolean isStoredPaymentMethod){
             ccrz.cc_RemoteActionResult res = ccrz.cc_CallContext.init(ctx);
             try {
-                ccrz__E_Cart__c cart = AdyenUtil.getCartByEncryptedId(ctx.currentCartId);
-                PaymentMethodsResponse paymentMethodsResponse = AdyenPaymentMethods.getPaymentMethods(cart, isStoredPaymentMethod);
+                PaymentMethodsResponse paymentMethodsResponse = AdyenPaymentMethods.getPaymentMethods(ctx.currentCartId, isStoredPaymentMethod);
 
                 //Remove suffix and convert to string
                 String jsonPaymentMethodsResponse = JSON.serialize(paymentMethodsResponse, true);
@@ -21,34 +20,15 @@ global with sharing class AdyenController {
             return res;
     }
 
-    public static ccrz.cc_RemoteActionResult processPayment(ccrz.cc_RemoteActionContext ctx, String stateData){
-         ccrz.cc_RemoteActionResult res = ccrz.cc_CallContext.init(ctx);
-        try {
-            ccrz.cc_hk_Payment paymentHook = ccrz.cc_hk_Payment.getInstance(null);
-            ccrz__E_Cart__c cart = AdyenUtil.getCartByEncryptedId(ctx.currentCartId);
-
-            Map<String, Object> inputParams = new Map<String, Object>();
-            inputParams.put('accountType', 'adyencc');
-            //Use token for stateData
-            inputParams.put('token', stateData);
-
-            Map<String, Object> paymentProcessorInput = new Map<String, Object>{
-                    ccrz.cc_hk_Payment.PARAM_TRANSACTION_DATA => JSON.serialize(inputParams), //stateData,
-                    ccrz.cc_hk_Payment.PARAM_PAYMENT_CTX => ccrz.cc_hk_Payment.PAYMENT_CTX_CHECKOUT,
-                    ccrz.cc_hk_Payment.PARAM_CART => cart,
-                    ccrz.cc_hk_Payment.PARAM_ACCOUNT_TYPE => 'adyencc'
-            };
-
-            Map<String, Object> processResult = paymentHook.processPayment(paymentProcessorInput);
-            Map<String, Object> paymentResult = (Map<String, Object>) processResult.get('paymentResult');
-
-            if (!(Boolean)paymentResult.get('isFinal')) {
-                cart.AdyenPaymentData__c = (String)paymentResult.get('paymentData');
-                update cart;
-                paymentResult.put('cartId', cart.Id);
-                res.data = paymentResult;
-                return res;
-            }
+    public static Map<String, Object> handlePaymentsCall(String cartId, String stateData, Boolean isZeroAuth){
+        Merchant__mdt merchant = Util.getConfigByName('AdyenMerchantConfig');
+        PaymentsRequest paymentsRequest = AdyenPayments.createPaymentsRequest(stateData, cartId, merchant, isZeroAuth);
+        PaymentsResponse paymentsResponse = AdyenPayments.authorisePayment(merchant, paymentsRequest);
+        return new Map<String, Object> {
+            'paymentResult' => AdyenResponseHandler.handleResponse(paymentsResponse),
+            'additionalData' => paymentsResponse.additionalData
+        };
+    }
 
             if (paymentResult.get('resultCode') == PaymentsResponse.ResultCodeEnum.AUTHORISED) {
                 //create order
@@ -88,7 +68,6 @@ global with sharing class AdyenController {
             if (Test.isRunningTest()) {
                 createOrderParams.put(ccrz.ccApiCart.SKIP_VALID_CHECK, true);
             }
-
             //Converts a cart to a corresponding order.
             Map<String, Object> placeResult = ccrz.ccApiCart.place(createOrderParams);
             return placeResult;
