PW-3164 Add credit card in My Wallet (#21)
* Initiate the Zero Auth request

* Update AdyenController and Processor

* Handle response and create StoredPaymentMethod

* Deleted amount from /paymentMethods for My Wallet

--- a/force-app/main/default/classes/AdyenController.cls
+++ b/force-app/main/default/classes/AdyenController.cls
@@ -2,8 +2,7 @@ global with sharing class AdyenController {
     public static ccrz.cc_RemoteActionResult obtainPaymentMethods(ccrz.cc_RemoteActionContext ctx, Boolean isStoredPaymentMethod){
             ccrz.cc_RemoteActionResult res = ccrz.cc_CallContext.init(ctx);
             try {
-                ccrz__E_Cart__c cart = AdyenUtil.getCartByEncryptedId(ctx.currentCartId);
-                PaymentMethodsResponse paymentMethodsResponse = AdyenPaymentMethods.getPaymentMethods(cart, isStoredPaymentMethod);
+                PaymentMethodsResponse paymentMethodsResponse = AdyenPaymentMethods.getPaymentMethods(ctx.currentCartId, isStoredPaymentMethod);
 
                 //Remove suffix and convert to string
                 String jsonPaymentMethodsResponse = JSON.serialize(paymentMethodsResponse, true);
@@ -21,60 +20,28 @@ global with sharing class AdyenController {
             return res;
     }
 
-    public static ccrz.cc_RemoteActionResult processPayment(ccrz.cc_RemoteActionContext ctx, String stateData){
-         ccrz.cc_RemoteActionResult res = ccrz.cc_CallContext.init(ctx);
-        try {
-            ccrz.cc_hk_Payment paymentHook = ccrz.cc_hk_Payment.getInstance(null);
-            ccrz__E_Cart__c cart = AdyenUtil.getCartByEncryptedId(ctx.currentCartId);
+    public static Map<String, Object> handlePaymentsCall(String cartId, String stateData, Boolean isZeroAuth){
+        Merchant__mdt merchant = Util.getConfigByName('AdyenMerchantConfig');
+        PaymentsRequest paymentsRequest = AdyenPayments.createPaymentsRequest(stateData, cartId, merchant, isZeroAuth);
+        PaymentsResponse paymentsResponse = AdyenPayments.authorisePayment(merchant, paymentsRequest);
+        return new Map<String, Object> {
+            'paymentResult' => AdyenResponseHandler.handleResponse(paymentsResponse),
+            'additionalData' => paymentsResponse.additionalData
+        };
+    }
 
-            Map<String, Object> inputParams = new Map<String, Object>();
-            inputParams.put('accountType', 'adyencc');
-            //Use token for stateData
-            inputParams.put('token', stateData);
+    public static void createStoredPaymentMethod(Map<String, String> additionalData, ccrz.cc_RemoteActionResult res){
+        ccrz__E_StoredPayment__c storedPayment = new ccrz__E_StoredPayment__c();
+        storedPayment.ccrz__Enabled__c = true;
+        storedPayment.ccrz__Token__c = additionalData.get('recurring_recurringDetailReference');
+        storedPayment.ccrz__DisplayName__c = additionalData.get('cardHolderName');
+        storedPayment.ccrz__Account__c = AdyenUtil.getAccountIdFromUser(UserInfo.getUserId()).AccountId;
+        storedPayment.ccrz__AccountNumber__c = (String)additionalData.get('cardBin') + '******' + (String)additionalData.get('cardSummary');
+        storedPayment.ccrz__User__c = UserInfo.getUserId();
+        storedPayment.ccrz__Storefront__c = res.inputContext.storeFront;
+        storedPayment.ccrz__AccountType__c = 'adyencc';
 
-            Map<String, Object> paymentProcessorInput = new Map<String, Object>{
-                    ccrz.cc_hk_Payment.PARAM_TRANSACTION_DATA => JSON.serialize(inputParams), //stateData,
-                    ccrz.cc_hk_Payment.PARAM_PAYMENT_CTX => ccrz.cc_hk_Payment.PAYMENT_CTX_CHECKOUT,
-                    ccrz.cc_hk_Payment.PARAM_CART => cart,
-                    ccrz.cc_hk_Payment.PARAM_ACCOUNT_TYPE => 'adyencc'
-            };
-
-            Map<String, Object> processResult = paymentHook.processPayment(paymentProcessorInput);
-            Map<String, Object> paymentResult = (Map<String, Object>) processResult.get('paymentResult');
-
-            if (!(Boolean)paymentResult.get('isFinal')) {
-                cart.AdyenPaymentData__c = (String)paymentResult.get('paymentData');
-                update cart;
-                paymentResult.put('cartId', cart.Id);
-                res.data = paymentResult;
-                return res;
-            }
-
-            if (paymentResult.get('resultCode') == PaymentsResponse.ResultCodeEnum.AUTHORISED) {
-                //create order
-                Map<String, Object> orderResult = AdyenController.placeOrder(processResult, cart.Id);
-                Map<String, String> orderIds = AdyenController.validateOrderResult(orderResult);
-                //Return orderId for confirmation page
-                res.data = orderIds.get('orderIdEnc');
-                res.success = true;
-                return res;
-            }
-
-            res.success = false;
-            ccrz.cc_bean_Message m = new ccrz.cc_bean_Message('Payment failed, result is ' + paymentResult);
-            res.messages.add(m);
-
-        } catch (Exception e) {
-            ccrz.ccLog.log(LoggingLevel.ERROR, 'Err', e);
-            //Exception handling here
-            System.Debug('#### exception ' + e.getMessage() + e.getStackTraceString());
-            res.success = false;
-            ccrz.cc_bean_Message m = new ccrz.cc_bean_Message(e.getMessage());
-            res.messages.add(m);
-        } finally {
-            ccrz.ccLog.close(res);
-        }
-        return res;
+        insert storedPayment;
     }
 
     public static Map<String, Object> placeOrder(Map<String, Object> processResult, String cartId) {
@@ -88,7 +55,6 @@ global with sharing class AdyenController {
             if (Test.isRunningTest()) {
                 createOrderParams.put(ccrz.ccApiCart.SKIP_VALID_CHECK, true);
             }
-
             //Converts a cart to a corresponding order.
             Map<String, Object> placeResult = ccrz.ccApiCart.place(createOrderParams);
             return placeResult;
